[hot-fix] closes #12

--- a/src/public/dark-theme.html
+++ b/src/public/dark-theme.html
@@ -14,9 +14,9 @@
 
   <style>
     .theme--dark {
-      background: var(--black);
+      background: #2f3740;
     }
-    
+
     .theme--dark
     a, p, span, label, h1, h2, h3,
     h4, h5, h6, div, th,
