--- a/src/public/light-theme.html
+++ b/src/public/light-theme.html
@@ -19,13 +19,13 @@
 
     .theme--light a, p,
     span, label, td {
-      color: var(--light-grey-1) !important;
+      color: #6a737d !important;
     }
   
     .theme--light
     h1, h2, h3,
     h4, h5, h6, div {
-      color: var(--black) !important;
+      color: #2f3740 !important;
     }
   </style>
 </head>
